2017-09-27  Manfred Brath  <manfred.brath@uni-hamburg.de>

	* arts-2-3-808

	* src/m_microphysics.cc  
	- (psdMY2, dNdD_MY2, dNdD_MY2_M,psdS2M, dNdD_SM2, dNdD_SM2_M):
	Renamed to psdMY05, dNdD_MY05, dNdD_MY05_M,psdSB06, dNdD_SB06, dNdD_SB06_M, 	
	and adjusted the function when needed to handle the new names including
	changed name-tags.
		
	* src/microphysics.{cc,h} (psd_MY2, psd_S2M, pnd_fieldMY2, pnd_fieldS2M):
	Renamed to psd_MY05, psd_SB06, pnd_fieldMY05, pnd_fieldSB06
	and adjusted the function when needed to handle the new names including
	changed name-tags.
	
	* src/methods.cc 
	- (psdS2M, psdMY2): 
	Renamed to psdSB06, psdMY05.
	
	- (dNdD_SB06, dNdD_SB06_M,dNdD_MY05, dNdD_MY05_M, 
	pnd_fieldCalcFromscat_speciesFields):
	Updated built-in doc according to the new names.
	
	* src/m_cloudbox.cc (pnd_fieldCalcFromscat_speciesFields):
	Changed to handle the new names.	


2017-09-25 Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-807

	* interactive_workspace.[cc,h]:
	- Added functions to set WSVs of type Tensor3 through python interface.

	* arts_api.[cc,h]:
	- Return error if variable cannot be set through interface.


2017-09-21 Simon Pfreundschuh  <simon.pfreundschuh@chalmers.se>

	* arts-2-3-807

	Adde functionality needed to set up retrievals of principal components.
	Also added functionality to enforce constraints on retrieval quantities.

	* src/jacobian.[h,cc]:
	- Added get_jacobian_indices function to get indices of transformed retrieval
	quantities before jacobianClose is calles
	- Some changes related to change of conventions for transformation matrices
	- Added members to hold constraints on retrieval quantities
	- Add nelem member function to get number of grid points from quantity

	* src/m_jacobian.cc(transformationAdd):
	- Renamed addTransformation

	* src/m_oem.cc:
	- Added function to enforce constraints on VMR quantities
	- Enforce constraints in x2artsStandard
	- Fixed application of transformation in x2artsStandard